src/components/SwiperContainer/SwiperContainer.css
/* Slider */
.slider-section {
  width: 85%;
  min-width: 340px;
  margin: 0 auto;
}

/* Slider title */
.slider-title {
  font-size: clamp(1.2rem, 1.4vw, 2rem);
  margin: 1.6rem 0 1.6rem 0;
  text-align: left;
}

/* Navigation */
.swiper-button-prev,
.swiper-button-next {
  display: none;
  align-items: center;
  justify-content: center;
  width: 40px;
  height: 90px;
  top: 50%;
  transform: translateY(-80%);
  border-radius: 4px;
  color: white;
  background-color: rgba(0, 0, 0, 0.6);
  z-index: 10;
}

.swiper-button-prev::after,
.swiper-button-next::after {
  font-size: 24px;
}

.slider-section:hover .swiper-button-prev,
.slider-section:hover .swiper-button-next {
  display: flex;
}

.swiper-button-prev { 
  left: 0;
}

.swiper-button-next {
  right: 0;
}

@media (max-width: 1200px){
.swiper-button-prev,
.swiper-button-next {
  display: flex;
}
}

@media (min-width: 1890px){
.swiper-button-next {
  right: 11px;
}
}

